--- a/api/paths/users.yaml
+++ b/api/paths/users.yaml
@@ -9,7 +9,7 @@ get:
       schema:
         type: string
     - name: seqVal
-      description: A list of operators' sequence values. Shall not be used with `username`
+      description: A list of users' sequence values. Shall not be used with `username`
       in: query
       schema:
         type: array
