[API] Update POST /regions

--- a/api/paths/regions.yaml
+++ b/api/paths/regions.yaml
@@ -10,7 +10,7 @@ post:
           properties:
             name:
               type: string
-            belong:
+            belongsTo:
               type: string
               description: >
                 Document ID of a region which it belongs to.
